# PYXCEL

./: README.md  main.py  pyproject.toml
.opencode/: opencode.jsonc
pyxcel/: __init__.py  app.py
pyxcel/engine/: formulas.py
pyxcel/macros/: macro_system.py
pyxcel/models/: spreadsheet.py  workbook.py
pyxcel/ui/: dialogs.py  table.py  theme.py  toolbar.py
pyxcel/utils/: chart_builder.py  file_handler.py
tests/: __init__.py  conftest.py  test_file_handler.py  test_formulas.py  test_spreadsheet.py  test_workbook.py
