[project]
name = "pyxcel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "formulas>=1.3.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyside6>=6.10.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.9",
]
