[project]
name = "pyxcel"
version = "0.1.0"
description = "Aplicación de hoja de cálculo estilo Python IDLE con PySide6"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "formulas>=1.3.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyside6>=6.10.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
